--- a/libft/Makefile
+++ b/libft/Makefile
@@ -2,12 +2,18 @@
 NAME = ft
 SRC_MAIN = main.c
 OBJ_MAIN = main.o
-# Librery libbsq.a
+# Librery libft.a
 NAMELIBFT = ft
 LIBFT = lib/libft.a
 INCS_FT = includes/ft.h
 SRCS_FT = $(shell find src -name "*.c")
 OBJS_FT = $(SRCS_FT:.c=.o)
+# Librery libtest.a
+NAMELIBTEST = test
+LIBTEST = lib/libtest.a
+INCS_TEST = includes/test.h
+SRCS_TEST = $(shell find tests -name "*.c")
+OBJS_TEST = $(SRCS_TEST:.c=.o)
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror
 INCFLAGS = -I includes
@@ -16,30 +22,40 @@ AR = ar -rc
 
 all: $(NAME)
 
-$(NAME): $(LIBFT) $(OBJ_MAIN)
+$(NAME): $(LIBFT) $(LIBTEST) $(OBJ_MAIN)
 	@echo Compiling Binary File: $@ ...
-	$(CC) $(CFLAGS) $(LIBFLAGS) -l $(NAMELIBFT) $(OBJ_MAIN) $(LIBFT) -o $@
+	$(CC) $(CFLAGS) $(LIBFLAGS) -l $(NAMELIBFT) -l $(NAMELIBTEST) $(OBJ_MAIN) $(LIBFT) $(LIBTEST) -o $@
 
 $(LIBFT): $(OBJS_FT) $(INCS_FT)
-	@echo Compiling Librery: $@ ...
+	@echo Compiling FT Librery: $@ ...
 	mkdir -p lib
 	$(AR) $@ $^
 
-$(OBJ_MAIN): $(SRC_MAIN) $(INCS_FT)
+$(LIBTEST): $(OBJS_TEST) $(INCS_TEST)
+	@echo Compiling TEST Librery: $@ ...
+	mkdir -p lib
+	$(AR) $@ $^
+
+$(OBJ_MAIN): $(SRC_MAIN) $(INCS_FT) $(INCS_TEST)
 	@echo Compiling Main File: $@ ...
 	$(CC) $(CFLAGS) $(INCFLAGS) -c $< -o $@
 
-%.o: %.c $(INCS_FT)
-	@echo Compiling Objects Files: $@ ...
+#%.o: %.c $(INCS_FT) $(INCS_TEST)
+$(OBJS_FT): $(SRCS_FT) $(INCS_FT)
+	@echo Compiling FT Objects Files: $@ ...
+	$(CC) -c $< $(CFLAGS) $(INCFLAGS) -o $@
+
+$(OBJS_TEST): $(SRCS_TEST) $(INCS_TEST)
+	@echo Compiling Tests Objects Files: $@ ...
 	$(CC) -c $< $(CFLAGS) $(INCFLAGS) -o $@
 
 clean:
 	@echo Delete Objects Files: $@ ...
-	$(RM) $(OBJS_FT) $(OBJ_MAIN)
+	$(RM) $(OBJS_FT) $(OBJSTEST) $(OBJ_MAIN)
 
 fclean: clean
-	@echo Library and Binary Files: $@ ...
-	$(RM) $(LIBFT) $(NAME)
+	@echo Delete Library and Binary Files: $@ ...
+	$(RM) $(LIBFT) $(LIBTEST) $(NAME)
 
 re: fclean all
 
