--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,73 +1,59 @@
 # Main program
-NAME = ft
+NAME = test_libft
 SRC_MAIN = main.c
 OBJ_MAIN = main.o
-# Librery libft.a
+# Library libft.a
 NAMELIBFT = ft
 LIBFT = lib/libft.a
 INCS_FT = includes/ft.h
 SRCS_FT = $(shell find src -name "*.c")
 OBJS_FT = $(SRCS_FT:.c=.o)
-# Librery libtest.a
-NAMELIBTEST = test
-LIBTEST = lib/libtest.a
-INCS_TEST = includes/test.h
+# Objects tests
 SRCS_TEST = $(shell find tests -name "*.c")
 OBJS_TEST = $(SRCS_TEST:.c=.o)
+# Compile parameter
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror
 INCFLAGS = -Iincludes
 LIBFLAGS = -Llib
 AR = ar rcs
-#AR = ar -rc
 
 all: $(NAME)
 
-#$(NAME): $(LIBFT) $(LIBTEST)
-#$(NAME): $(LIBFT) $(OBJ_MAIN)
-$(NAME): $(LIBFT) $(LIBTEST) $(OBJ_MAIN)
+$(NAME): $(LIBFT) $(OBJS_TEST) $(OBJ_MAIN)
 	@echo Compiling Binary File: $@ ...
-	#$(CC) -static $(CFLAGS) $(INCFLAGS) $(LIBFLAGS) -l $(NAMELIBFT) -l $(NAMELIBTEST) $(OBJ_MAIN) -o $@
-	#$(CC) -static $(CFLAGS) $(LIBFLAGS) -l$(NAMELIBFT) -l$(NAMELIBTEST) $(OBJ_MAIN) -o $@
-	#$(CC) -static $(CFLAGS) $(INCFLAGS) $(LIBFLAGS) -l$(NAMELIBFT) $(OBJ_MAIN) $(LIBFT) -o $@
-	$(CC) $(CFLAGS) $(OBJ_MAIN) $(LIBFT) $(LIBTEST) -o $@
+	$(CC) $(CFLAGS) $(OBJ_MAIN) $(OBJS_TEST) $(LIBFT) -o $@
+	@echo
 
 $(LIBFT): $(OBJS_FT) $(INCS_FT)
 	@echo Compiling FT Librery: $@ ...
 	mkdir -p lib
 	$(AR) $@ $^
+	@echo
 
-$(LIBTEST): $(OBJS_TEST) $(INCS_FT) $(INCS_TEST)
-	@echo Compiling TEST Librery: $@ ...
-	mkdir -p lib
-	$(AR) $@ $^
-
-#$(OBJ_MAIN): $(SRC_MAIN) $(INCS_FT)
-$(OBJ_MAIN): $(SRC_MAIN) $(INCS_FT) $(INCS_TEST)
+$(OBJ_MAIN): $(SRC_MAIN) $(INCS_FT)
 	@echo Compiling Main File: $@ ...
 	$(CC) $(CFLAGS) $(INCFLAGS) -c $< -o $@
+	@echo
 
-#%.o: %.c $(INCS_FT) $(INCS_TEST)
-#$(OBJS_FT): $(SRCS_FT) $(INCS_FT) $(INCS_TEST)
-#$(OBJS_FT): $(SRCS_FT) $(INCS_FT) 
-%.o: %.c $(INCS_FT) 
+%.o: %.c $(INCS_FT)
 	@echo Compiling FT Objects Files: $@ ...
 	$(CC) $(CFLAGS) $(INCFLAGS) -c $< -o $@
 	#$(CC) $(CFLAGS) $(INCFLAGS) -c $^ -o $@
-
-#$(OBJS_TEST): $(SRCS_TEST) $(INCS_FT) $(INCS_TEST)
-#	@echo Compiling Tests Objects Files: $@ ...
-#	$(CC) $(CFLAGS) $(INCFLAGS) -c $< -o $@
+	@echo
 
 clean:
 	@echo Delete Objects Files: $@ ...
 	$(RM) $(OBJS_FT) $(OBJSTEST) $(OBJ_MAIN)
+	@echo
 
 fclean: clean
 	@echo Delete Library and Binary Files: $@ ...
 	$(RM) $(LIBFT) $(LIBTEST) $(NAME)
+	@echo
 
 re: fclean all
+	@echo
 
 dbg:	CFLAGS += -O0 -g
 dbg:	RULE = dbg
