--- a/libft/prueba/Makefile
+++ b/libft/prueba/Makefile
@@ -5,8 +5,8 @@ OBJ_MAIN = main.o
 # Library libft.a
 NAMELIBFT = ft
 LIBFT = libft.a
-INCS_FT = includes/ft.h
-SRCS_FT = $(shell find src -name "*.c")
+INCS_FT = ft.h
+SRCS_FT = $(shell find . -name "*.c")
 OBJS_FT = $(SRCS_FT:.c=.o)
 # Objects tests
 SRCS_TEST = $(shell find tests -name "*.c")
@@ -14,8 +14,7 @@ OBJS_TEST = $(SRCS_TEST:.c=.o)
 # Compile parameter
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror
-INCFLAGS = -Iincludes
-LIBFLAGS = -Llib
+#INCFLAGS = -Iincludes
 AR = ar rcs
 
 all: $(NAME)
@@ -32,13 +31,14 @@ $(LIBFT): $(OBJS_FT) $(INCS_FT)
 
 $(OBJ_MAIN): $(SRC_MAIN) $(INCS_FT)
 	@echo Compiling Main File: $@ ...
-	$(CC) $(CFLAGS) $(INCFLAGS) -c $< -o $@
+	#$(CC) $(CFLAGS) $(INCFLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@
 	@echo
 
 %.o: %.c $(INCS_FT)
 	@echo Compiling FT Objects Files: $@ ...
-	$(CC) $(CFLAGS) $(INCFLAGS) -c $< -o $@
-	#$(CC) $(CFLAGS) $(INCFLAGS) -c $^ -o $@
+	#$(CC) $(CFLAGS) $(INCFLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@
 	@echo
 
 clean:
