--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,9 +3,12 @@ NAME = libft.a
 # Library libft.a
 NAMELIBFT = ft
 LIBFT = libft.a
+LIBFTSO = libft.so
 INCS_FT = libft.h
-SRCS_FT = $(shell find . -name "*.c")
+SRCS_FT = $(shell find . -name "*.c" ! -name "*_bonus.c")
 OBJS_FT = $(SRCS_FT:.c=.o)
+# Bonus
+SRCS_Bonus = $(shell find . -name "*_bonus.c")
 # Compile parameter
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror
@@ -13,7 +16,7 @@ AR = ar rcs
 
 all: $(NAME)
 
-$(NAME): $(LIBFT)
+$(NAME): $(LIBFT) $(LIBFTSO)
 	@echo Compiling Binary File: $@ ...
 	@echo
 
@@ -22,26 +25,32 @@ $(LIBFT): $(OBJS_FT) $(INCS_FT)
 	$(AR) $@ $^
 	@echo
 
+$(LIBFTSO): $(OBJS_FT) $(INCS_FT)
+	@echo Compiling FT Librery SO: $@ ...
+	$(AR) $@ $^
+	@echo
+
 $(OBJ_MAIN): $(SRC_MAIN) $(INCS_FT)
 	@echo Compiling Main File: $@ ...
-	#$(CC) $(CFLAGS) $(INCFLAGS) -c $< -o $@
 	$(CC) $(CFLAGS) -c $< -o $@
 	@echo
 
 %.o: %.c $(INCS_FT)
 	@echo Compiling FT Objects Files: $@ ...
-	#$(CC) $(CFLAGS) $(INCFLAGS) -c $< -o $@
 	$(CC) $(CFLAGS) -c $< -o $@
 	@echo
 
+bonus: 
+	@echo Compiling Bonus Objects Files: $@ ...
+
 clean:
 	@echo Delete Objects Files: $@ ...
-	$(RM) $(OBJS_FT) $(OBJSTEST) $(OBJ_MAIN)
+	$(RM) $(OBJS_FT) $(OBJ_MAIN)
 	@echo
 
 fclean: clean
 	@echo Delete Library and Binary Files: $@ ...
-	$(RM) $(LIBFT) $(LIBTEST) $(NAME)
+	$(RM) $(LIBFT) $(LIBFTSO) $(NAME)
 	@echo
 
 re: fclean all
