--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: ramrodri <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/11/20 20:35:37 by ramrodri          #+#    #+#              #
-#    Updated: 2019/11/20 21:38:08 by ramrodri         ###   ########.fr        #
+#    Updated: 2019/11/20 23:29:40 by ramrodri         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,10 +15,10 @@ NAME = libft.a
 LIBFTSO = libft.so
 INCLUDE = libft.h
 # Library libft
-SRCS_FT = $(shell find . -name "*.c" ! -name "*_bonus.c")
+SRCS_FT = $(shell find . -name "*.c" ! -name "*_bonus.c" -printf "%f\n")
 OBJS_FT = $(SRCS_FT:.c=.o)
 # Bonus
-SRCS_Bonus = $(shell find . -name "*_bonus.c")
+SRCS_Bonus = $(shell find . -name "*_bonus.c" -printf "%f\n")
 OBJS_Bonus = $(SRCS_Bonus:.c=.o)
 # Compile parameter
 CC = gcc
@@ -30,7 +30,7 @@ all: $(NAME)
 
 $(NAME): $(OBJS_FT) $(INCLUDE)
 	@echo Compiling FT Library: $@ ...
-	$(AR) $@ $^
+	$(AR) $(NAME) $(OBJS_FT)
 	@echo
 
 bonus: $(OBJS_Bonus) $(INCLUDE)
@@ -38,7 +38,7 @@ bonus: $(OBJS_Bonus) $(INCLUDE)
 	$(AR) $(NAME) $(OBJS_Bonus)
 	@echo
 
-%.o: %.c $(INCLUDE)
+%.o: %.c
 	@echo Compiling FT Objects Files: $@ ...
 	$(CC) $(CFLAGS) -fPIC -c -o $@ $<
 	@echo
